# job-search-tracker-cli

./: .gitignore  README.md  TODO.md  plan.md  pyproject.toml  requirements.txt  user_profile.md
.github/: copilot-instructions.md
job_tracker/: calendar_auth.py  calendar_utils.py  database.py  llm.py  main.py  models.py  scraper.py  utils.py
job_tracker/commands/: __init__.py  add.py  config.py  delete.py  edit.py  stats.py  transcript.py  view.py
scripts/: bulk_add.py  bulk_urls.txt
